--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Crista Alejandre - Illustration" />
+    <meta name="description" content="Man Over Board Blog" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
   </head>
@@ -10,7 +10,7 @@
     <div class="container">
       <nav>
         <a href="{{ site.url }}/index.html">
-          <img src="{{ site.url }}/cristaalejandre.png" alt="Crista Alejandre">
+          <img src="{{ site.url }}/mob_logo.jpg" alt="Man Over Board">
         </a>
         <ul>
           <li><a href="{{ site.url }}/index.html">Home</a></li>
