--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,4 +1,5 @@
-{% include header.html %}
+{% include head.html %}
+{% include nav.html %}
 <section>
 <ul class="gallery">
   {% for post in site.posts %}
