change url link to baseurl

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <nav>
-  <a href="{{ site.url }}/index.html">
-    <img src="{{ site.url }}/mob_logo.jpg" alt="Man Over Board">
+  <a href="{{ site.baseurl }}/index.html">
+    <img src="{{ site.baseurl }}/mob_logo.jpg" alt="Man Over Board">
   </a>
   <p class="tagline">a man, a board, abroad: a blog</p>
   <ul>
-    <li><a href="{{ site.url }}/index.html">Home</a></li>
-    <li><a href="{{ site.url }}/about">About</a></li>
+    <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
+    <li><a href="{{ site.baseurl }}/about">About</a></li>
     <!--<li><a href="{{ site.url }}/other-work">Other Work</a></li>-->
   </ul>
   </nav>
