--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 <footer>
-	<p>&copy; 2014 <a href="{{ site.url }}/about/">Kevin Bicknell</a></p>
+	<p>&copy; 2014 <a href="{{ site.baseurl }}/about/">Kevin Bicknell</a></p>
 </footer>
 </div>
 
