--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Man Over Board Blog" />
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body>
     <div class="container">
