--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
 <ul class="post_list">
   {% for post in site.posts %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.baseurl }}">{{ post.title }}</a></h2>
       {{ post.excerpt }}
     </li>
   {% endfor %}
