--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,8 @@
   </a>
   <p class="tagline">a man, a board, abroad: a blog</p>
   <ul>
-    <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-    <li><a href="{{ site.baseurl }}/about">About</a></li>
+    <li class="button button-1"><a href="{{ site.baseurl }}/index.html">Home</a></li>
+    <li class="button button-1"><a href="{{ site.baseurl }}/about">About</a></li>
     <!--<li><a href="{{ site.url }}/other-work">Other Work</a></li>-->
   </ul>
   </nav>
