--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,18 @@
 <nav>
   <a href="{{ site.baseurl }}/index.html">
-    <img src="{{ site.baseurl }}/mob_logo.jpg" alt="Man Over Board">
+    <img src="{{ site.baseurl }}/images/mob_logo.png" alt="Man Over Board">
   </a>
   <p class="tagline">a man, a board, abroad: a blog</p>
   <ul>
     <li class="button button-1"><a href="{{ site.baseurl }}/index.html">Home</a></li>
     <li class="button button-1"><a href="{{ site.baseurl }}/about">About</a></li>
-    <!--<li><a href="{{ site.url }}/other-work">Other Work</a></li>-->
+    <li class="button button-1"><a href="{{ site.baseurl }}/#">Post Categories</a></li>
   </ul>
+
+    <footer>
+  <p>&copy; 2014 <a href="{{ site.baseurl }}/about/">Kevin Bicknell</a></p>
+</footer>
+
+
   </nav>
+
