--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -1,4 +1,4 @@
-button {
+.button {
   margin-top: 10px;
   margin-right: 10px;
   padding: 14px 26px;
@@ -6,7 +6,7 @@ button {
   line-height: 100%;
   text-shadow: 0 1px rgba(0, 0, 0, 0.4);
   color: #fff;
-  display:inline-block;
+  display: block;
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
@@ -18,28 +18,27 @@ button {
   -o-transition: background 0.1s ease-in-out;
   text-shadow: 0 1px rgba(0, 0, 0, 0.3);
   color: #fff;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 .button:active {
   padding-top: 15px;
         margin-bottom: -1px;
 }
-.butto, .button:hover, .button:active {
+.button a, .button a:hover, .button a:active {
   outline: 0 none;
   text-decoration: none;
-  color: #fff;
+  color: #093b75;
+  text-transform: uppercase;
 }
 
 .button-1 {
-  background-color: #3fb8e8;
-  box-shadow: 0px 3px 0px 0px #3293ba;
+  background-color: #fff;
 }
 .button-1:hover {
-  background-color: #1baae3;
+  background-color: #ddd;
 }
 .button-1:active {
-  box-shadow: 0px 1px 0px 0px #3293ba;
+  box-shadow: 0px 1px 0px 0px #093b75;
 }
