--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -1,29 +1,27 @@
 .button {
   margin-top: 10px;
   margin-right: 10px;
-  padding: 14px 26px;
+  padding: 20px 26px;
   font-size: 14px;
   line-height: 100%;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.4);
   color: #fff;
   display: block;
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
   font-weight: bold;
-  transition: background 0.1s ease-in-out;
-  -webkit-transition: background 0.1s ease-in-out;
-  -moz-transition: background 0.1s ease-in-out;
-  -ms-transition: background 0.1s ease-in-out;
-  -o-transition: background 0.1s ease-in-out;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  transition: background 0.2s ease-in-out;
+  -webkit-transition: background 0.2s ease-in-out;
+  -moz-transition: background 0.2s ease-in-out;
+  -ms-transition: background 0.2s ease-in-out;
+  -o-transition: background 0.2s ease-in-out;
   color: #fff;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
 .button:active {
-  padding-top: 15px;
+  padding-top: 20px;
         margin-bottom: -1px;
 }
 .button a, .button a:hover, .button a:active {
@@ -37,8 +35,8 @@
   background-color: #fff;
 }
 .button-1:hover {
-  background-color: #ddd;
+  background-color: #eee;
 }
 .button-1:active {
-  box-shadow: 0px 1px 0px 0px #093b75;
+  box-shadow: 0px 10px 0px 0px #ccc;
 }
