apply button class to anchor not li

--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -1,10 +1,8 @@
 .button {
   margin-top: 10px;
-  margin-right: 10px;
   padding: 20px 26px;
   font-size: 14px;
   line-height: 100%;
-  color: #fff;
   display: block;
   vertical-align: middle;
   text-align: center;
@@ -15,7 +13,7 @@
   -moz-transition: background 0.2s ease-in-out;
   -ms-transition: background 0.2s ease-in-out;
   -o-transition: background 0.2s ease-in-out;
-  color: #fff;
+  color: #093b75;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
