--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,9 @@
   </a>
   <p class="tagline">a man, a board, abroad: a blog</p>
   <ul>
-    <li class="button button-1"><a href="{{ site.baseurl }}/index.html">Home</a></li>
-    <li class="button button-1"><a href="{{ site.baseurl }}/about">About</a></li>
-    <li class="button button-1"><a href="{{ site.baseurl }}/#">Post Categories</a></li>
+    <li><a class="button button-1" href="{{ site.baseurl }}/index.html">Home</a></li>
+    <li><a class="button button-1" href="{{ site.baseurl }}/about">About</a></li>
+    <li><a class="button button-1" href="{{ site.baseurl }}/#">Post Categories</a></li>
   </ul>
 
     <footer>
