--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <a href="{{ site.baseurl }}/index.html">
     <img src="{{ site.baseurl }}/images/mob_logo.png" alt="Man Over Board">
   </a>
-  <p class="tagline">a man, a board, abroad: a blog</p>
+ <!--<p class="tagline">a man, a board, abroad: a blog</p>-->
   <ul>
     <li><a class="button button-1" href="{{ site.baseurl }}/index.html">Home</a></li>
     <li><a class="button button-1" href="{{ site.baseurl }}/about">About</a></li>
