--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,9 +8,17 @@
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.date }}
-      {{ post.excerpt }}
+      <span class="date">Posted on {{ post.date | date: '%B %d, %Y' }}</span>
+      {{ post.content }}
+    </li>
+    <li>
+      <ul class="tags">
+        <li><a href="#">tag</a></li>
+        <li><a href="#">tag name</a></li>
+      </ul>
     </li>
   {% endfor %}
 </ul>
+
+
 </section>
