--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
   <ul>
     <li><a class="button button-1" href="{{ site.baseurl }}/index.html">Home</a></li>
     <li><a class="button button-1" href="{{ site.baseurl }}/about">About</a></li>
-    <li><a class="button button-1" href="{{ site.baseurl }}/#">Post Categories</a></li>
+    <li><a class="button button-1" href="{{ site.baseurl }}/tags">Browse by Tags</a></li>
   </ul>
 
     <footer>
