tags now link to anchor on browse by tags page

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -15,7 +15,7 @@
     <li>
       <ul class="tags">
         {% for tags in post.tags %}
-          <li><a href="#">{{ tags }}</a></li>
+          <li><a href="{{ site.baseurl }}/tags/#{{ tags }}">{{ tags }}</a></li>
           {% endfor %}
       </ul>
     </li>
