--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Man Over Board Blog" />
-    <title>{{ page.title }}</title>
+    <title>{{ site.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   </head>
   <body>
