more style changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,12 +6,9 @@
   <ul>
     <li><a class="button button-1" href="{{ site.baseurl }}/index.html">Home</a></li>
     <li><a class="button button-1" href="{{ site.baseurl }}/about">About</a></li>
-    <li><a class="button button-1" href="{{ site.baseurl }}/tags">Browse by Tags</a></li>
+    <li><a class="button button-1" href="{{ site.baseurl }}/tags">Browse</a></li>
   </ul>
 
-    <footer>
-  <p>&copy; 2014 <a href="{{ site.baseurl }}/about/">Kevin Bicknell</a></p>
-</footer>
 
 
   </nav>
