--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -1,19 +1,15 @@
 .button {
   margin-top: 10px;
-  padding: 20px 45px;
+  padding: 15px 45px;
   font-size: 20px;
   line-height: 100%;
   display: block;
   vertical-align: middle;
   //text-align: center;
   cursor: pointer;
-  font-weight: bold;
-  transition: background 0.2s ease-in-out;
-  -webkit-transition: background 0.2s ease-in-out;
-  -moz-transition: background 0.2s ease-in-out;
-  -ms-transition: background 0.2s ease-in-out;
-  -o-transition: background 0.2s ease-in-out;
-  color: #093b75;
+  font-weight: 700;
+  font-size: 1em;
+   color: #093b75;
   border: 3px solid #fff;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
