--- a/sass/_tag.scss
+++ b/sass/_tag.scss
@@ -7,15 +7,15 @@
 
   .tags li, .tags a{
   float:left;
-  height:40px;
-  line-height:40px;
+  height:30px;
+  line-height:30px;
   position:relative;
-  font-size:14px;
+  font-size:.9em;
   }
 
   .tags a{
   margin-left:40px;
-  padding:0 20px 0 24px;
+  padding:0 15px 0 20px;
   background:#ccc;
   color:#444;
   text-decoration:none;
@@ -33,23 +33,23 @@
   float:left;
   position:absolute;
   top:0;
-  left:-20px;
+  left:-15px;
   width:0;
   height:0;
   border-color:transparent #ccc transparent transparent;
   border-style:solid;
-  border-width:20px 20px 20px 0;    
+  border-width:15px 15px 15px 0;    
   }
 
 //the tag hole
   .tags a:after{
   content:"";
   position:absolute;
-  top:18px;
+  top:13px;
   left:0;
   float:left;
-  width:7px;
-  height:7px;
+  width:5px;
+  height:5px;
   -moz-border-radius:3.5px;
   -webkit-border-radius:3.5px;
   border-radius:3.5px;
