--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,11 +2,11 @@ nav {
   position: absolute;
   left: 0;
   top: 0;
-  width: 300px;
+  width: 250px;
   padding: 25px;
   background: #fff;
   img {
-    width: 300px;
+    width: 250px;
   }
   ul {
     list-style-type: none;
@@ -14,7 +14,7 @@ nav {
   }
   a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1em;
   }
 }
 
