--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,8 +33,8 @@ ul li a {
 ul.post_list {
   list-style-type: none;
   padding: 0;
-  li:nth-child(even) {
-    padding-bottom:200px;
+  li:nth-child(3) {
+    padding-bottom:150px;
   }
 }
 
