--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -20,8 +20,28 @@
       </ul>
     </li>
 
+    <li class="comment_link">
+      <a href="{{ site.baseurl }}{{ post.url }}" data-disqus-identifier="{{ post.id }}">Leave a Comment</a>
+    </li>
+
   {% endfor %}
 </ul>
 
 
 </section>
+
+    <script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'man-over-board'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
+
+  </body>
+  </html>
