fix markdown file extension in post; fix n count in nth-child post padding

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,7 +33,7 @@ ul li a {
 ul.post_list {
   list-style-type: none;
   padding: 0;
-  li:nth-child(3) {
+  li:nth-child(3n) {
     padding-bottom:150px;
   }
 }
