--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -5,32 +5,17 @@
   line-height: 100%;
   display: block;
   vertical-align: middle;
-  //text-align: center;
   cursor: pointer;
   font-weight: 700;
   font-size: 1em;
    color: #093b75;
-  border: 3px solid #fff;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  background-color: #fff
 }
 
 .button a, .button a:hover, .button a:active {
-  outline: 0 none;
-  text-decoration: none;
   color: #093b75;
   text-transform: uppercase;
 }
 
-.button-1 {
-  background-color: #fff;
-}
-.button-1:hover {
-  background-color: #eee;
-}
-.button-1:active {
-  box-shadow: 0px 10px 0px 0px #ccc;
-}
