add social icons using font-awesome

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,14 @@
     <li><a class="button" href="{{ site.baseurl }}/index.html">Home</a></li>
     <li><a class="button" href="{{ site.baseurl }}/about">About</a></li>
     <li><a class="button" href="{{ site.baseurl }}/tags">Browse</a></li>
+    <li class="social">
+      <a class="button" href="http://twitter.com/manoboardblog">
+        <i class="fa fa-twitter"></i>
+      </a> 
+      <a class="button" href="http://instagram.com/manoboardblog">
+        <i class="fa fa-instagram"></i>
+      </a>
+    </li>
   </ul>
 
 
