--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Man Over Board Blog" />
     <title>{{ site.title }}</title>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+
   </head>
   <body>
     <div class="container">
