--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -2,8 +2,7 @@
   margin-top: 10px;
   padding: 15px 45px;
   font-size: 20px;
-  line-height: 100%;
-  display: block;
+  line-height: 60px;
   vertical-align: middle;
   cursor: pointer;
   font-weight: 700;
@@ -17,5 +16,16 @@
 .button a, .button a:hover, .button a:active {
   color: #093b75;
   text-transform: uppercase;
+}
+
+li.social {
+  padding: 15px 45px;
+  a {
+    padding: 0 5px 0 0;
+  }
+}
+
+.fa {
+  font-size: 25px;
 }
 
